--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="%sveltekit.assets%/favicon.ico"
+    />
     <title>Tauri + SvelteKit + Typescript App</title>
     %sveltekit.head%
   </head>
